[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/UGC/GUI/GameLibrary/delete_icon.png" type="Texture" id=1]
[ext_resource path="res://addons/UGC/GUI/GameLibrary/unselected_icon.png" type="Texture" id=2]
[ext_resource path="res://addons/UGC/GUI/GameLibrary/selected_icon.png" type="Texture" id=3]
[ext_resource path="res://addons/UGC/GUI/ContentLibrary/ContentType.gd" type="Script" id=4]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 164.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="AddCheckBox" type="CheckBox" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_icons/radio_checked = ExtResource( 3 )
custom_icons/checked = ExtResource( 3 )
custom_icons/radio_unchecked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 2 )
align = 1

[node name="NameLabel" type="Label" parent="."]
margin_left = 44.0
margin_top = 13.0
margin_right = 120.0
margin_bottom = 27.0
size_flags_horizontal = 7
text = "visual novel"
valign = 1

[node name="SubCheckBox" type="CheckBox" parent="."]
margin_left = 124.0
margin_right = 164.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 9
custom_icons/radio_checked = ExtResource( 1 )
custom_icons/checked = ExtResource( 1 )
custom_icons/radio_unchecked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 2 )
align = 1

[connection signal="toggled" from="AddCheckBox" to="." method="_on_AddCheckBox_toggled"]
[connection signal="toggled" from="SubCheckBox" to="." method="_on_SubCheckBox_toggled"]
